Catty - 5 Fixed Tint of Toolbar
Took me 2 hours to find out that barTintColor seems to be backgroundColor now

--- a/src/Catty/Storyboard+XIB/iPhone.storyboard
+++ b/src/Catty/Storyboard+XIB/iPhone.storyboard
@@ -58,6 +58,8 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="vkL-G0-p9O"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mEE-Kl-xq6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
